force-app/main/default/objects/License_Information__c/License_Information__c.object-meta.xml
<CustomObject>
    <label>License Information</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>License Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>