force-app/main/default/objects/License_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Lookup to Contact</description>
    <inlineHelpText>Lookup to Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>License Informations</relationshipLabel>
    <relationshipName>License_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>