force-app/main/default/objects/License_Information__c/fields/Doctor_license_number__c.field-meta.xml
<CustomField>
    <fullName>Doctor_license_number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This contains Doctor License Number</description>
    <inlineHelpText>This contains Doctor License Number</inlineHelpText>
    <label>Doctor license number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>