force-app/main/default/objects/License_Information__c/fields/License_Address__c.field-meta.xml
<CustomField>
    <fullName>License_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This contains License Address information</description>
    <label>License Address</label>
    <type>Address</type>
</CustomField>