force-app/main/default/objects/License_Information__c/fields/License_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>License_expiry_date__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This contains License expiry Date</description>
    <label>License expiry date</label>
    <type>Date</type>
</CustomField>