force-app/main/default/objects/License_Information__c/fields/License_issuing_authority__c.field-meta.xml
<CustomField>
    <fullName>License_issuing_authority__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This contains License Issuing Authority</description>
    <label>License issuing authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>