force-app/main/default/objects/License_Information__c/fields/License_type__c.field-meta.xml
<CustomField>
    <fullName>License_type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This contains License Type</description>
    <label>License type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician Qualification Certificate</fullName>
            </value>
            <value>
                <fullName>General Dental License</fullName>
            </value>
            <value>
                <fullName>Physician Practicing Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>