force-app/main/default/objects/License_Information__c/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>License Information of HCP</description>
    <externalId>true</externalId>
    <label>MDM Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>